# mlops-zoomcamp-project

./: .gitignore  .pre-commit-config.yaml  README.md  dagster.yaml  pyproject.toml  ruff.toml
.github/workflows/: ci-tests.yml
docker/: docker-compose-service.yaml  docker-compose.yaml
docker/mlflow/: Dockerfile
docker/prediction_service/: Dockerfile  requirements.txt
notebooks/: eda.ipynb  model.ipynb
scripts/: run-integration-test.sh  run-sandbox.sh
src/pipelines/: jobs.py  train_linear_lag_model.py
src/web-service/: lin_reg_service.py
tests/data/: data_sample.csv  data_sample_integration.csv
tests/src/pipelines/: test_train_linear_lag_model.py
tests/utils/: register_latest_model.py
