[tool.poetry]
name = "drought-prediction"
version = "0.1.0"
description = ""
authors = ["aleksandr.tretyakov <antirevel@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyterlab = "^4.2.3"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
mlflow = "^2.14.3"
dagster = "^1.7.14"
dagster-webserver = "^1.7.14"
gunicorn = "^22.0.0"
evidently = "^0.4.31"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "drought_prediction"